--- a/jUnit/pom.xml
+++ b/jUnit/pom.xml
@@ -176,6 +176,17 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1.0.0.redhat-6</version>
+        </dependency>
     </dependencies>
 
 
